create login-signup pages and handle events

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body>
+<body class="login-signup-body">
     <div class="form-container">
         <h1 class="large-middle-text">It's Debate Time!</h1>
         <form action="/login" method="post">
