--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body>
+<body class="login-signup-body">
     <div class="form-container">
         <h1 class="large-middle-text">Sign up!</h1>
         <form action="/signup" method="post">
